<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Mysolite Anjana</string>
    <string name="place_api_key" >AIzaSyC-BYCFrpXUa4CI-H9fRqWEc0-I_ylk31k</string>
    <string name="default_notification_channel_id" translatable="false">Channel Id</string>
    <string name="ColonnaMT">ColonnaMT</string>
    <string name="Leprosy">Leprosy</string>
    <string name="BomBardment">bombardment_shadow</string>
    <string name="mina">Mina_is_gone_3D</string>
    <string name="Yeysk">Yeysk</string>
    <string name="Maribel_Suit">Maribel_Suit</string>
    <string name="arial">arial</string>
    <string name="Mistral">Mistral</string>
    <string name="CooperBlack">Cooper_Black_Regular</string>
    <string name="file_provider_authority" translatable="false">app.zingo.mysolite.fileprovider</string>
    <string name="splash_app_name">Employee Management</string>
    <string name="powered_by_zingo">Powered By Lucida Technologies</string>
    <string name="copyright_lucida">&#9400; Lucida Hospitality Pvt Ltd</string>
    <string name="login_app_name">Employee Management</string>
    <string name="login_app_desc">Manage your Organization</string>
    <string name="verify_text">Verify your Mobile Number</string>
    <string name="verify_msg">Enter the 6-digit code we sent to </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Zingo Hotels</string>
    <string name="textMeeting">Details</string>
    <string name="mapView">Map View</string>
    <string name="workingDays">Worked Days</string>
    <string name="leaveDays">Leave Taken</string>
    <string name="leaveNew">Apply Leave</string>
    <string name="leaveRequest">Leaves</string>
    <string name="share_app_text">Share App</string>
    <string name="hint_contact_add_email">Email Id</string>
    <string name="hint_contact_add_mobile">Mobile Number</string>
    <string name="rupess">\u20A8</string>
    <string name="uploadImages">Set your image</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_status">Leave Status</string>
    <string-array name="task_status">
        <item>Pending</item>
        <item>On-Going</item>
        <item>Completed</item>
        <item>Closed</item>

    </string-array>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <string-array name="order_status">
        <item>Pending</item>
        <item>Order Taken</item>
        <item>Dispatched</item>
        <item>Delivered</item>
        <item>Payment Done</item>
        <item>Closed</item>

    </string-array>
    <string-array name="break_status">
        <item>Tea Break</item>
        <item>Lunch Break</item>
        <item>Others</item>
    </string-array>
    <string-array name="week_off_day">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>

    </string-array>
    <string-array name="week_off_week">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
    </string-array>
    <string-array name="log_status">

        <item>Absent</item>
        <item>Present</item>

    </string-array>
    <string-array name="meeting_status">
        <item>In-Meeting</item>
        <item>Cancelled</item>
        <item>Completed</item>


    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renew_alert_message">Dear Customer, Your EMS Subscription Expired.\nUpdate your plan and use our services. </string>
    <string name="error_code_expire">Error Code: EC_E05</string>
    <string name="accounts">Accounts</string>
    <string name="description_add">Add Calendar</string>
    <string name="summary">Title</string>
    <string name="summary_hint">Enter the calendar title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="batchadd">Copy Calendar x3 (Batch)</string>
    <string name="edit">Edit Calendar</string>
    <string name="delete">Delete Calendar</string>
    <string name="delete_title">Delete Calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error !</string>
    <string name="error_format">[Error] %s</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="company_step_one">Choose your User type as a Company &amp; Employer and click \"Join\" button.</string>
    <string name="employee_step_one">Choose your User type as an Employee and click \"Join\" button.</string>
    <string name="reseller_step_one">Choose your User type as a Company &amp; Employer and click \"Join\" button.</string>
    <string name="company_step_ones">If you did not add any department ,you will get a pop-up to add a department when you logged in using your Founder/Manager/Super admin credentials.\n Mention Department Name and Description then click on \"Create Department\".</string>
    <string name="company_step_3">Enter your organization basic info based on given fields and Click on \"Create Organization\" button.</string>
    <string name="company_step_2">Choose your Plan type as a PAID VERSION or TRIAL VERSION.If you choose TRIAL VERSION, Try it free for 30 Days. \nIf you choose PAID VERSION, based on your plan subscription you will get our Services.</string>
    <string name="company_step_4">Enter \"Founder\" mobile number and click on Verify button.You will get OTP within few seconds. Enter OTP to verify it.</string>
    <string name="employee_step_4">Enter \"Employee\" mobile number and click on Verify button.You will get OTP within few seconds. Enter OTP to verify it.</string>
    <string name="company_step_5">Enter Founder\'s Basic information and based on given fields and Click on \"Create Founder\" button.</string>
    <string name="employee_step_5">Verify Organization code which shared on email or by Manager.\nEnter Employees\'s Basic information and based on given fields and Click on \"Create Employee\" button.</string>
    <string name="company_step_2s">Click on \"Hamburger Icon(three horizontal lines which is in top right)\" and Click on \"Department\".You will get department list and \"Add Department\" button.\nClick on \"Add Department\" button,you will get pop-up. Mention Department Name and Description then click on \"Create Department\".</string>
    <string name="company_step_4s">Click on \"Hamburger Icon(three horizontal lines which is in top right)\" and Click on \"Attendance\".You will get employees list with their attendance status(Present/Absent).\nClick on Employee\'s Name,you will get two options there.\n • By clicking on \"UPDATE\" you can change attendance status of employee for example present to absent or vice versa.\n • By clicking \"VIEW\" you can see related employee dashboard . In this dashboard it will show current date details of employee</string>
    <string name="employees_step_4s">Click on \"Attendance\". \n•If you want to put check-in , click on Check-In Icon before that you need to on GPS in your mobile.After successful check-in. your check-in time will display below on icon.\n•If you want to put check-in , click on Check-Out Icon before that you need to on GPS in your mobile.\n•You can also able to put your attendance by scaning QR Code if it is placed on your Organization.</string>
    <string name="employees_step_5s">Click on \"Attendance\". \n•If you want to put Meeting check-in , click on Meeting Check-In Icon before that you need to on GPS in your mobile.You will get pop-up to fill basic meeting details.\nAfter successful check-in. your check-in time will display below on icon.\n•If you want to put Meeting check-in , click on Meeting Check-Out Icon before that you need to on GPS in your mobile.</string>
    <string name="company_step_6s">Click on \"Hamburger Icon(three horizontal lines which is in top right)\" and Click on \"Task\".You will get employees list with their attendance status(Present/Absent).\nClick on Employee\'s Name,you will able to see task list of that particular employee for today.\n • By clicking on \"Date\" you can change date and see the task list on selected date with status .\n • By clicking \"Pencil\" you can create task for that employee. you can assign task with Geo fencing(optional)</string>
    <string name="company_step_6sd">Click on \"Task\".You will get task list of all employees for current date.\nClick on Employee\'s Icon,You will get employees list with their attendance status(Present/Absent).\nClick on Employee\'s Name,you will able to see task list of that particular employee for today.\n • By clicking on \"Date\" you can change date and see the task list on selected date with status .\n • By clicking \"Pencil\" you can create task for that employee. you can assign task with Geo fencing(optional)</string>
    <string name="employee_step_6s">Click on \"Hamburger Icon(three horizontal lines which is in top right)\" and Click on \"Task\".you will able to see task list of yours for today.\n • By clicking on \"Date\" you can change date and see the task list on selected date with status .\n • By clicking \"Pencil\" you can create task for you. you can assign task with Geo fencing(optional)</string>
    <string name="employee_step_6sd">Click on \"Task\".you will able to see task list of yours for today.\n • By clicking on \"Date\" you can change date and see the task list on selected date with status .\n • By clicking \"Pencil\" you can create task for you. you can assign task with Geo fencing(optional)</string>
    <string name="dialog_ok">OK</string>
    <string name="krony">Mysolite</string>
    <string name="need_your_permission_to_work">NEED YOUR PERMISSION TO WORK</string>
    <string name="allow_access">Allow Access</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign in</string>
    <string name="support">Support</string>
    <string name="e_mail_user_name">E-mail/User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_as_reseller">Sign-in As Reseller</string>
    <string name="get_started">Get Started</string>
    <string name="contact_us">Contact Us</string>
    <string name="fields_are_mandatory">*Fields are mandatory</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="brand_name_imp">Brand Name*</string>
    <string name="give_desc_brand">Give Description of the Brand*</string>
    <string name="choose_image">Choose Image !</string>
    <string name="pick_from_gallary">Pick from gallary</string>
    <string name="click_from_camera">Click from camera</string>
    <string name="remove_image">Remove Image</string>
    <string name="please_check_your_internet_connection">Please check your internet
        connection</string>
    <string name="todo">TODO</string>
</resources>