<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:text="@string/choose_image"
                android:textSize="18sp"
                android:textColor="@color/black_de"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="#bfbebe"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:id="@+id/gallary"
            android:text="@string/pick_from_gallary"
            android:textSize="16sp"
            android:textColor="@color/grey_charcoal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="#bfbebe"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:id="@+id/camera"
            android:text="@string/click_from_camera"
            android:textSize="16sp"
            android:textColor="@color/grey_charcoal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="10dp"
            android:background="#bfbebe"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:id="@+id/remove"
            android:text="@string/remove_image"
            android:textSize="16sp"
            android:textColor="@color/grey_charcoal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:id="@+id/dialog_ok"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>