<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context="app.zingo.mysolite.ui.landing.PermissionRequestScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <app.zingo.mysolite.Custom.CustomFontTextView
            android:id="@+id/app_name_prs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="normal"
            app:fontName="Mistral"
            android:text="@string/krony"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/need_prs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/need_your_permission_to_work"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:layout_centerHorizontal="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/need_prs"
            android:id="@+id/permission_list_rcv"
            android:background="#ffffff"
            android:layout_margin="10dp"/>

        <app.zingo.mysolite.Custom.MyRegulerText
            android:layout_below="@+id/permission_list_rcv"
            android:layout_width="250dp"
            android:layout_centerHorizontal="true"
            android:layout_height="50dp"
            android:id="@+id/allow_access"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/allow_access"
            android:background="@drawable/gradient_rect"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>
