<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <Button
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:text="@string/save"
        android:textColor="@android:color/white"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/save">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/brand_name_imp"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/stock_category_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textCapWords"
                    android:hint="@string/brand_name_imp"
                    android:textColor="#000000"
                    android:layout_margin="10dp"
                    android:background="@drawable/spinner_background"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/give_desc_brand"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/stock_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/spinner_background"
                    android:scrollbars="vertical"
                    android:gravity="top"
                    android:maxLines="5"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:lines="5"
                    android:hint="@string/give_desc_brand"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#696969"
                android:text="@string/fields_are_mandatory"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image_layout"
                android:layout_margin="5dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_file_upload"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10.0dip"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="@dimen/activity_large_margin"
                    android:text="@string/upload_pictures"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/stock_category_image">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
